bunnies instead of cats

--- a/convolution.html
+++ b/convolution.html
@@ -22,8 +22,8 @@
           <input type="submit" value="Set" />
         </form>
         or
-        <form action="" id="url-randomcat">
-          <input type="submit" value="Random cat" />
+        <form action="" id="url-randompic">
+          <input type="submit" value="Random bunny" />
         </form>
       </section>
       <form action="" id="mask">
