added lolcat support :)

--- a/convolution.html
+++ b/convolution.html
@@ -25,6 +25,9 @@
         <form action="" id="url-randompic">
           <input type="submit" value="Random bunny" />
         </form>
+        <form action="" id="url-randomcat">
+          <input type="submit" value="Random cat" />
+        </form>
       </section>
       <form action="" id="mask">
         <label>
