jquery is now a submodule

--- a/convolution.html
+++ b/convolution.html
@@ -4,11 +4,40 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <title>Canvas convolution demo</title>
     <link rel="stylesheet" href="convolution.css" />
-    <link rel="stylesheet" href="cupertino/jquery-ui-1.8.2.custom.css" />
-    <script type="text/javascript"
-      src="jquery-1.4.2.min.js"></script>
-    <script type="text/javascript"
-      src="jquery-ui-1.8.2.custom.min.js"></script>
+    <link rel="stylesheet" href="jquery-ui/themes/base/jquery.ui.all.css" />
+    <script type="text/javascript" src="jquery-ui/jquery-1.4.3.js"></script>
+    <script type="text/javascript" src="jquery-ui/external/jquery.bgiframe-2.1.2.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.ui.core.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.ui.widget.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.ui.mouse.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.ui.accordion.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.ui.autocomplete.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.ui.button.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.ui.datepicker.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.ui.dialog.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.ui.draggable.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.ui.droppable.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.ui.position.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.ui.progressbar.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.ui.resizable.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.ui.selectable.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.ui.slider.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.ui.sortable.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.ui.tabs.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.effects.core.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.effects.blind.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.effects.bounce.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.effects.clip.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.effects.drop.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.effects.explode.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.effects.fade.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.effects.fold.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.effects.highlight.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.effects.pulsate.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.effects.scale.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.effects.shake.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.effects.slide.js"></script>
+    <script type="text/javascript" src="jquery-ui/ui/jquery.effects.transfer.js"></script>
     <script type="text/javascript"
       src="page.js"></script>
   </head>
