custom tag support added

--- a/convolution.html
+++ b/convolution.html
@@ -57,6 +57,10 @@
         <form action="" id="url-randomcat">
           <input type="submit" value="Random cat" />
         </form>
+        <form action="" id="url-random">
+          <input type="submit" value="Random " />
+          <input type="text" name="image-tag" />
+        </form>
       </section>
       <form action="" id="mask">
         <label>
